Fixed some errors in Portuguese translations and added missing translations.

--- a/app/res/values-pt/strings.xml
+++ b/app/res/values-pt/strings.xml
@@ -145,7 +145,7 @@
     <string name="go_to_location">Ir para Localização</string>
     <string name="font_size">Tamanho da Fonte do Texto</string>
     <string name="change_font_size">Tamanho da Fonte do Texto</string>
-    <string name="form_scan_starting">Procurando por formulários...</string>
+    <string name="form_scan_starting">Procurando por formulários…</string>
     <string name="form_scan_finished">Completa a varredura de formulários</string>
     <string name="access_error">"Erro enquanto acessa %s: "</string>
     <string name="manifest_server_error">Manifestar uma resposta quando não ha uma versão do Open Rosa -- servidor ruin?</string>
@@ -189,42 +189,42 @@
     <string name="connect_button_logged_in">Vá para o Conectar menu</string>
     <string name="connect_db_corrupt">Ocorreu um problema com a base de dados, Por favor recupere a sua conta.</string>
     <string name="connect_consent_title">Concordo</string>
-    <string name="connect_consent_message_1">Reconheço e compreendo que posso receber notificações push e mensagens SMS para efeitos de comunicação</string>
-    <string name="connect_consent_message_2">Clique aqui para dar o seu consentimento</string>
-    <string name="connect_consent_check">OK</string>
-    <string name="connect_consent_button">Número de telefone</string>
-    <string name="connect_phone_page_title">Telefone principal</string>
-    <string name="connect_phone_title_primary">por favor Introduza o seu número de telefone principal</string>
-    <string name="connect_phone_message_primary">Telefone alternativo</string>
-    <string name="connect_phone_title_alternate">Introduza um número de telefone de um amigo ou família que lhe possa fornecer uma OTP por SMS se se esquecer da sua palavra-passe ou PIN.</string>
-    <string name="connect_phone_message_alternate">OK</string>
-    <string name="connect_phone_button">A verificar...</string>
-    <string name="connect_phone_checking">O número de telefone está disponível!</string>
-    <string name="connect_phone_available">O número de telefone já está em uso</string>
-    <string name="connect_phone_unavailable">Introduza um número de telefone válido</string>
-    <string name="connect_phone_invalid">Não é possível usar o seu número alt.</string>
-    <string name="connect_phone_not_alt">O número alternativo deve ser diferente do número principal</string>
-    <string name="connect_phone_not_primary">Número de telefone não encontrado</string>
-    <string name="connect_phone_not_found">Erro ao alterar o número de telefone</string>
-    <string name="connect_phone_change_error">Definir palavra-passe</string>
-    <string name="connect_password_title">Por favor, escolha uma senha</string>
-    <string name="connect_password_message">Por favor, escolha uma senha para recuperação</string>
-    <string name="connect_password_message_recovery">OK</string>
-    <string name="connect_password_button">Introduza a palavra-passe</string>
-    <string name="connect_password">Confirmar palavra-passe</string>
-    <string name="connect_password_repeat">As palavras-passe têm de corresponder</string>
-    <string name="connect_password_mismatch">Por favor, escolha uma senha mais forte</string>
-    <string name="connect_password_weak">Erro ao alterar a palavra-passe</string>
-    <string name="connect_password_error">Escolha o PIN</string>
-    <string name="connect_pin_title_set">Confirmar PIN</string>
-    <string name="connect_pin_title_confirm">Escolha um PIN de 6 dígitos para recuperação de conta</string>
-    <string name="connect_pin_message_set">Introduza o PIN de recuperação que introduziu anteriormente</string>
-    <string name="connect_pin_message_repeat">Introduza o seu PIN de recuperação</string>
-    <string name="connect_pin_message_confirm">Insira o PIN</string>
-    <string name="connect_pin">Confirmar PIN</string>
-    <string name="connect_pin_repeat">O PIN deve ser %d dígitos</string>
-    <string name="connect_pin_length">Os PINs devem corresponder</string>
-    <string name="connect_pin_mismatch">#N/A</string>
+    <string name="connect_consent_message_1">Li e concordo com a <a href="https://www.dimagi.com/terms/latest/privacy/">Política de Privacidade</a>, <a href="https://www.dimagi.com/terms/latest/tos/">Termos de Serviço</a>, <a href="https://www.dimagi.com/terms/latest/ba/">Acordo Comercial</a> e <a href="https://www.dimagi.com/terms/latest/aup/">Política de Uso Aceitável da Dimagi</a></string>
+    <string name="connect_consent_message_2">Reconheço e compreendo que posso receber notificações push e mensagens SMS para efeitos de comunicação</string>
+    <string name="connect_consent_check">Clique aqui para dar o seu consentimento</string>
+    <string name="connect_consent_button">OK</string>
+    <string name="connect_phone_page_title">Número de telefone</string>
+    <string name="connect_phone_title_primary">Telefone principal</string>
+    <string name="connect_phone_message_primary">por favor Introduza o seu número de telefone principal</string>
+    <string name="connect_phone_title_alternate">Telefone alternativo</string>
+    <string name="connect_phone_message_alternate">Introduza um número de telefone de um amigo ou família que lhe possa fornecer uma OTP por SMS se esquecer da sua palavra-passe ou PIN.</string>
+    <string name="connect_phone_button">OK</string>
+    <string name="connect_phone_checking">A verificar…</string>
+    <string name="connect_phone_available">O número de telefone está disponível!</string>
+    <string name="connect_phone_unavailable">O número de telefone já está em uso</string>
+    <string name="connect_phone_invalid">Introduza um número de telefone válido</string>
+    <string name="connect_phone_not_alt">Não é possível usar o seu número alt.</string>
+    <string name="connect_phone_not_primary">O número alternativo deve ser diferente do número principal</string>
+    <string name="connect_phone_not_found">Número de telefone não encontrado</string>
+    <string name="connect_phone_change_error">Erro ao alterar o número de telefone</string>
+    <string name="connect_password_title">Definir palavra-passe</string>
+    <string name="connect_password_message">Por favor, escolha uma senha</string>
+    <string name="connect_password_message_recovery">Por favor, escolha uma senha para recuperação</string>
+    <string name="connect_password_button">OK</string>
+    <string name="connect_password">Introduza a palavra-passe</string>
+    <string name="connect_password_repeat">Confirmar palavra-passe</string>
+    <string name="connect_password_mismatch">As palavras-passe têm de corresponder</string>
+    <string name="connect_password_weak">Por favor, escolha uma senha mais forte</string>
+    <string name="connect_password_error">Erro ao alterar a palavra-passe</string>
+    <string name="connect_pin_title_set">Escolha o PIN</string>
+    <string name="connect_pin_title_confirm">Confirmar PIN</string>
+    <string name="connect_pin_message_set">Escolha um PIN de 6 dígitos para recuperação de conta</string>
+    <string name="connect_pin_message_repeat">Introduza o PIN de recuperação que introduziu anteriormente</string>
+    <string name="connect_pin_message_confirm">Introduza o seu PIN de recuperação</string>
+    <string name="connect_pin">Insira o PIN</string>
+    <string name="connect_pin_repeat">Confirmar PIN</string>
+    <string name="connect_pin_length">O PIN deve ser %d dígitos</string>
+    <string name="connect_pin_mismatch">Os PINs devem corresponder</string>
     <string name="connect_password_verify_title">Introduza a sua palavra-passe</string>
     <string name="connect_password_verify_message">Introduza a sua palavra-passe de recuperação para continuar.</string>
     <string name="connect_password_verify">Introduza a palavra-passe</string>
@@ -236,8 +236,8 @@
     <string name="connect_password_fail_button">OK</string>
     <string name="connect_pin_fail_title">PIN errado</string>
     <string name="connect_pin_fail_message">Introduziu o PIN errado, tente novamente.</string>
-    <string name="connect_pin_recovery_message">Você inseriu o PIN errado muitas vezes, você precisará recuperar sua conta.n Na próxima tela, nós \'ll enviar um código via SMS para o número de telefone alternativo associado à sua conta.</string>
-    <string name="connect_pin_confirm_message">Você inseriu o PIN errado muitas vezes, você terá que configurar o pino novamente.n Na próxima tela, nós \'ll redirecioná-lo para a página de configuração do pin.</string>
+    <string name="connect_pin_recovery_message">Introduziu o PIN errado demasiadas vezes, terá de recuperar a sua conta.n No ecrã seguinte, enviaremos um código via SMS para o número de telefone alternativo associado à sua conta.</string>
+    <string name="connect_pin_confirm_message">Você inseriu o PIN errado muitas vezes, você terá que configurar o pino novamente.n Na próxima tela, redirecionaremos você para a página de configuração do pin</string>
     <string name="connect_pin_verify_forgot">Não tem ou esqueceu o seu PIN?</string>
     <string name="connect_pin_fail_button">OK</string>
     <string name="connect_recovery_title">Configuração do ConnectID</string>
@@ -331,17 +331,17 @@
     <string name="connect_job_learning_not_completed">Aprendizagem não concluída</string>
     <string name="connect_job_assessment_not_completed">Avaliação não concluída</string>
     <string name="connect_job">Trabalho</string>
-    <string name="connect_job_none_training">Você \'re não treinamento para qualquer trabalho agora</string>
-    <string name="connect_job_none_active">Você don \'t tem quaisquer empregos ativos agora</string>
+    <string name="connect_job_none_training">Você não está treinando para nenhum emprego agora</string>
+    <string name="connect_job_none_active">Você não tem nenhum emprego ativo no momento</string>
     <string name="connect_job_none_available">Não há oportunidades disponíveis no momento</string>
-    <string name="connect_job_training">Empregos I \'m Formação para</string>
+    <string name="connect_job_training">Empregos para os quais estou treinando</string>
     <string name="connect_job_claimed">Trabalhos na entrega</string>
     <string name="connect_job_ended">Trabalhos encerrados</string>
     <string name="connect_job_completed">%s terminado</string>
     <string name="connect_job_you_will_learn">Complete os seguintes módulos de aprendizagem e ganhe um certificado</string>
     <string name="connect_job_start_training">Inicie a formação para este trabalho</string>
     <string name="connect_job_no_learning_required">Não é necessário aprender</string>
-    <string name="connect_job_full_description">%snGanhe até %s</string>
+    <string name="connect_job_full_description">%s\nGanhe até %s</string>
     <string name="connect_job_go_to_learn_app">Ir para a aplicação Learn</string>
     <string name="connect_job_download_learn_app">Descarregar a aplicação Learn</string>
     <string name="connect_job_learn_summary">%d módulos, %d horas</string>
@@ -350,11 +350,11 @@
     <string name="connect_learn_need_assessment_title">Formação pendente</string>
     <string name="connect_learn_failed_title">Treinamento reprovado</string>
     <string name="connect_learn_complete_by">Concluir projeto por %s</string>
-    <string name="connect_learn_status">Você concluiu %d de %d lições.nTermine o aprendizado para ganhar seu certificado.</string>
-    <string name="connect_learn_not_started">Você não completou nenhuma lição.nComece a aprender para ganhar seu certificado.</string>
-    <string name="connect_learn_finished">Você ganhou um certificado para este trabalho e está qualificado para reivindicar o emprego e começar a prestar cuidados.nSua pontuação: %dnPontuação de aprovação: %d</string>
+    <string name="connect_learn_status">Você concluiu %d de %d lições.\nTermine o aprendizado para obter seu certificado.</string>
+    <string name="connect_learn_not_started">Você não completou nenhuma lição.\nComece a aprender para ganhar seu certificado.</string>
+    <string name="connect_learn_finished">Você ganhou um certificado para este trabalho e está qualificado para reivindicar o emprego e começar a prestar cuidados.\nSua pontuação: %d\nPontuação de aprovação: %d</string>
     <string name="connect_learn_need_assessment">Conclua a avaliação para terminar o treinamento.</string>
-    <string name="connect_learn_failed">Desculpe, você não ganhou uma pontuação de aprovação em sua avaliação. Tente novamente.nSua pontuação: %dnPontuação de aprovação: %d</string>
+    <string name="connect_learn_failed">Desculpe, você não ganhou uma pontuação de aprovação em sua avaliação. Tente novamente.\nSua pontuação: %d\nPontuação de aprovação: %d</string>
     <string name="connect_learn_complete">Concluída</string>
     <string name="connect_learn_certificate">CERTIFICADO DE CONCLUSÃO</string>
     <string name="connect_learn_completed">Concluído em: %s</string>
@@ -369,7 +369,7 @@
     <string name="connect_delivery_title">Detalhes da entrega</string>
     <string name="connect_delivery_review_title">Rever os detalhes do trabalho</string>
     <string name="connect_delivery_days_remaining">%d dias para concluir a partir de %s</string>
-    <string name="connect_delivery_today">Hoje</string>
+    <string name="connect_delivery_today">hoje</string>
     <string name="connect_delivery_latest_start">Início mais recente: %s</string>
     <string name="connect_delivery_max_visits">%d Visitas em %d Dias</string>
     <string name="connect_delivery_earn_single">Ganhe %s por visita</string>
@@ -386,7 +386,7 @@
     <string name="connect_progress_delivery_verification">Verificação e Pagamentos</string>
     <string name="connect_progress_title">Progresso da entrega</string>
     <string name="connect_progress_status">Você concluiu %d de %d visitas.</string>
-    <string name="connect_progress_begin_date">O projeto começa em %snEntrega completa por %s</string>
+    <string name="connect_progress_begin_date">O projeto começa em %s\nEntrega completa por %s</string>
     <string name="connect_progress_complete_by">Entrega Completa por %s</string>
     <string name="connect_progress_ended">Trabalho encerrado %s</string>
     <string name="connect_progress_expired_dialog_title">Projeto expirado</string>
@@ -409,7 +409,7 @@
     <string name="connect_downloading_delivery">Baixando o aplicativo de entrega</string>
     <string name="connect_downloading_status">%d%% Concluído</string>
     <string name="connect_results_summary_verifications_title">Estado da verificação</string>
-    <string name="connect_results_summary_verifications_description">Verificação pendente: %dnNão aprovado: %dnAprovado: %d</string>
+    <string name="connect_results_summary_verifications_description">Verificação pendente: %d\nNão aprovado: %d\nAprovado: %d</string>
     <string name="connect_results_summary_view_deliveries">Ver Entregas</string>
     <string name="connect_results_summary_payments_title">Pagamentos</string>
     <string name="connect_results_summary_view_payments">Ver Pagamentos</string>
@@ -424,7 +424,7 @@
     <string name="connect_results_payment_confirm_undo">Desfazer confirmação</string>
     <string name="connect_results_payment_confirmed">Confirmado</string>
     <string name="connect_results_payment_not_confirmed">Não confirmado</string>
-    <string name="connect_payment_confirm_text">Você foi pago!n%s %s pago %s.nVocê recebeu o pagamento?</string>
+    <string name="connect_payment_confirm_text">Você foi pago!\n%s %s pago %s.\nVocê recebeu o pagamento?</string>
     <string name="connect_payment_confirm_yes">Sim!</string>
     <string name="connect_payment_confirm_no">Pergunte mais tarde</string>
     <string name="connect_payment_confirm_failed">Falha ao enviar a confirmação, pediremos novamente mais tarde.</string>
