--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -10,17 +10,22 @@
     <!-- string name="ota_restore_url">https://pact.dimagi.com/provider/caselist</string -->
 
     <string name="ConnectTokenURL">https://connectid.dimagi.com/o/token/</string>
+    <string name="ConnectFetchDbKeyURL">https://connectid.dimagi.com/users/fetch_db_key</string>
     <string name="ConnectChangePasswordURL">https://connectid.dimagi.com/users/change_password</string>
     <string name="ConnectResetPasswordURL">https://connectid.dimagi.com/users/recover/reset_password</string>
     <string name="ConnectConfirmPasswordURL">https://connectid.dimagi.com/users/recover/confirm_password</string>
+    <string name="ConnectSetPinURL">https://connectid.dimagi.com/users/set_recovery_pin</string>
+    <string name="ConnectConfirmPinURL">https://connectid.dimagi.com/users/recover/confirm_pin</string>
     <string name="ConnectUpdateProfileURL">https://connectid.dimagi.com/users/update_profile</string>
     <string name="ConnectChangePhoneURL">https://connectid.dimagi.com/users/change_phone</string>
     <string name="ConnectPhoneAvailableURL">https://connectid.dimagi.com/users/phone_available</string>
     <string name="ConnectRecoverURL">https://connectid.dimagi.com/users/recover</string>
     <string name="ConnectRecoverSecondaryURL">https://connectid.dimagi.com/users/recover/secondary</string>
+    <string name="ConnectVerifySecondaryURL">https://connectid.dimagi.com/users/validate_secondary_phone</string>
     <string name="ConnectValidatePhoneURL">https://connectid.dimagi.com/users/validate_phone</string>
     <string name="ConnectRecoverConfirmOTPURL">https://connectid.dimagi.com/users/recover/confirm_otp</string>
     <string name="ConnectRecoverConfirmSecondaryOTPURL">https://connectid.dimagi.com/users/recover/confirm_secondary_otp</string>
+    <string name="ConnectVerifyConfirmSecondaryOTPURL">https://connectid.dimagi.com/users/confirm_secondary_otp</string>
     <string name="ConnectConfirmOTPURL">https://connectid.dimagi.com/users/confirm_otp</string>
     <string name="ConnectRegisterURL">https://connectid.dimagi.com/users/register</string>
 
@@ -400,6 +405,7 @@
     <string name="recovery_forms_send_error" cc:translatable="true">Error while sending forms</string>
     <string name="recovery_forms_state_unavailable" cc:translatable="true">Forms are not available. Make sure your phone storage is available</string>
     <string name="recovery_network_unavailable" cc:translatable="true">No network connection. Please check your internet and try again.</string>
+    <string name="recovery_network_outdated" cc:translatable="true">The app is outdated and can no longer communicate with the server. Please update the app on the Google Play Store.</string>
     <string name="recovery_app_manager" cc:translatable="true">Go to App Manager</string>
     <string name="recovery_retry" cc:translatable="true">Retry Recovery</string>
 
@@ -478,13 +484,16 @@
 
     <string name="connect_id_enabled" cc:translatable="true">ConnectID Enabled</string>
     <string name="login_button_connect" cc:translatable="true">Unlock ConnectID</string>
+    <string name="login_password_by_connect">Via ConnectID (or press here)</string>
     <string name="login_welcome_connect_signed_out" cc:translatable="true">Unlock ConnectID first and then enter your app.</string>
     <string name="login_welcome_connect_signed_in" cc:translatable="true">Welcome %s!</string>
+    <string name="login_connect_secondary_phone_message">Please confirm your secondary phone by %s to keep using ConnectID.</string>
 
     <string name="choice_or" cc:translatable="true">_____________    OR    _____________</string>
     <string name="busy_message" cc:translatable="true">We are still busy processing your previous request. Please try again in some time.</string>
 
     <string name="connect_button_logged_in" cc:translatable="true">Go to Connect menu</string>
+    <string name="connect_db_corrupt">A problem occurred with the database, please recover your account.</string>
     <string name="connect_button_logged_out" cc:translatable="true">Unlock ConnectID</string>
 
     <string name="connect_consent_title" cc:translatable="true">Consent</string>
@@ -506,6 +515,7 @@
     <string name="connect_phone_not_alt" cc:translatable="true">Can not use your alt. number</string>
     <string name="connect_phone_not_primary" cc:translatable="true">Alt. number must be different than primary</string>
     <string name="connect_phone_not_found" cc:translatable="true">Phone number not found</string>
+    <string name="connect_phone_change_error">Error changing phone number</string>
 
     <string name="connect_password_title" cc:translatable="true">Set Password</string>
     <string name="connect_password_message" cc:translatable="true">Please choose a password</string>
@@ -515,6 +525,17 @@
     <string name="connect_password_repeat" cc:translatable="true">Confirm Password</string>
     <string name="connect_password_mismatch" cc:translatable="true">Passwords must match</string>
     <string name="connect_password_weak" cc:translatable="true">Please choose a stronger password</string>
+    <string name="connect_password_error">Error changing password</string>
+
+    <string name="connect_pin_title_set">Choose PIN</string>
+    <string name="connect_pin_title_confirm">Confirm PIN</string>
+    <string name="connect_pin_message_set">Please choose a 6-digit PIN for account recovery</string>
+    <string name="connect_pin_message_repeat">Please enter the recovery PIN that you previously entered</string>
+    <string name="connect_pin_message_confirm">Please enter your recovery PIN</string>
+    <string name="connect_pin">Enter PIN</string>
+    <string name="connect_pin_repeat">Confirm PIN</string>
+    <string name="connect_pin_length">PIN must be %d digits</string>
+    <string name="connect_pin_mismatch">PINs must match</string>
 
     <string name="connect_password_verify_title" cc:translatable="true">Enter Your Password</string>
     <string name="connect_password_verify_message" cc:translatable="true">Please enter your recovery password to continue.</string>
@@ -526,6 +547,13 @@
     <string name="connect_password_fail_message" cc:translatable="true">You entered the wrong password, please try again.</string>
     <string name="connect_password_recovery_message" cc:translatable="true">You entered the wrong password too many times, you will need to recover your account.</string>
     <string name="connect_password_fail_button" cc:translatable="true">OK</string>
+
+    <string name="connect_pin_fail_title">Wrong PIN</string>
+    <string name="connect_pin_fail_message">You entered the wrong PIN, please try again.</string>
+    <string name="connect_pin_recovery_message">You entered the wrong PIN too many times, you will need to recover your account.\n On the next screen, we\'ll send a code via SMS to the alternate phone number associated with your account.</string>
+    <string name="connect_pin_confirm_message">You entered the wrong PIN too many times, you will have to configure the pin again.\n On the next screen, we\'ll redirect you to the configure pin page.</string>
+    <string name="connect_pin_verify_forgot">Don\'t have or forgot your PIN?</string>
+    <string name="connect_pin_fail_button">OK</string>
 
     <string name="connect_recovery_title" cc:translatable="true">ConnectID Setup</string>
     <string name="connect_recovery_title2" cc:translatable="true">Identify Existing Account</string>
@@ -539,10 +567,12 @@
     <string name="connect_recovery_alt_title" cc:translatable="true">Alternate Phone</string>
     <string name="connect_recovery_alt_message" cc:translatable="true">On the next screen, we\'ll send a code via SMS to the alternate phone number associated with your account. Once verified, you can set a new password.</string>
     <string name="connect_recovery_alt_button" cc:translatable="true">Continue</string>
+    <string name="connect_recovery_alt_change_button">Change number</string>
 
     <string name="connect_recovery_success_title" cc:translatable="true">Account Recovered</string>
     <string name="connect_recovery_success_message" cc:translatable="true">You have successfully recovered your account and can now resume using your ConnectID.</string>
     <string name="connect_recovery_success_button" cc:translatable="true">OK</string>
+    <string name="connect_recovery_failure">Error finalizing recovery, please try again later</string>
 
     <string name="connect_biometric_enroll_fail_title">Biometric Issue</string>
     <string name="connect_biometric_enroll_fail_message">You will need to configure this biometric manually in the Android settings.</string>
@@ -596,18 +626,23 @@
     <string name="connect_verify_phone_title" cc:translatable="true">Verification Code</string>
     <string name="connect_verify_phone_title2" cc:translatable="true">Enter verification code</string>
     <string name="connect_verify_phone_label" cc:translatable="true">We attempted to send you a code on number %s.</string>
+    <string name="connect_verify_phone_label_secondary">We attempted to send you a code on your secondary phone number.</string>
     <string name="connect_verify_phone_label_alternate" cc:translatable="true">Almost there! Please enter the code sent via SMS to your alternate phone%s.</string>
     <string name="connect_verify_phone_resend" cc:translatable="true">Didn\'t receive your code? Resend</string>
     <string name="connect_verify_phone_resend_wait" cc:translatable="true">Didn\'t receive your code? Resend in %d s</string>
     <string name="connect_verify_phone_change" cc:translatable="true">Change phone number</string>
     <string name="connect_verify_phone_verify" cc:translatable="true">Verify code</string>
 
-    <string name="connect_pictures_title" cc:translatable="true">Account Recovery</string>
-    <string name="connect_pictures_label" cc:translatable="true">To help with account recovery, you can optionally take some photos to help identify you.</string>
-    <string name="connect_pictures_face" cc:translatable="true">Face</string>
-    <string name="connect_pictures_id" cc:translatable="true">Official ID</string>
-    <string name="connect_pictures_skip" cc:translatable="true">Skip</string>
-    <string name="connect_pictures_continue" cc:translatable="true">Continue</string>
+    <string name="connect_payment_confirm_yes">Yes!</string>
+    <string name="connect_payment_confirm_no">Ask later</string>
+
+    <string name="login_button_connectid">Login with ConnectID</string>
+    <string name="login_link_connectid_title">Link to ConnectID?</string>
+    <string name="login_link_connectid_message">Do you want to link this login to your ConnectID account? You will not need to type your password in the future.</string>
+    <string name="login_unlink_connectid_title">Unlink ConnectID?</string>
+    <string name="login_unlink_connectid_message">I see you logged in with your password although ConnectID was configured for auto-login. Would you like to sever this login from ConnectID?</string>
+    <string name="login_link_connectid_yes">Yes</string>
+    <string name="login_link_connectid_no">No</string>
 
     <string name="login_menu_connect_sign_in" cc:translatable="true">Sign up for ConnectID</string>
     <string name="login_menu_connect_sign_out" cc:translatable="true">Sign out of ConnectID</string>
