--- a/app/res/values-fr/strings.xml
+++ b/app/res/values-fr/strings.xml
@@ -268,4 +268,10 @@ License.
     <string name="connect_button_logged_in">Allez dans le menu Connecter</string>
     <string name="connect_db_corrupt">Un problème est survenu avec la base de données, veuillez récupérer votre compte.</string>
     <string name="connect_job_list_api_failure">Une erreur s\'est produite lors de la connexion au serveur.</string>
+
+    <string name="connect_deactivate_account">Désactiver le compte</string>
+    <string name="connect_deactivate_account_message">Vous êtes sur le point de désactiver définitivement ce compte…</string>
+    <string name="connect_deactivate_account_go_back">Retourner</string>
+    <string name="connect_deactivate_account_deactivated">Compte désactivé, allez en créer un nouveau</string>
+    <string name="connect_deactivate_account_creation">Créer un compte</string>
 </resources>
