--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -95,7 +95,7 @@
 
     <string name="submission_notification_title">Submitting Data</string>
     <string name="submission_logs_title">Submitting CommCare Logs</string>
-    <string name="remote_form_payload_url"/>
+    <string name="remote_form_payload_url" />
 
     <string name="url_prompt">Choose a URL</string>
     <string name="about_dialog" formatted="false" cc:translatable="true">%s\n\n_Copyright 2016, Dimagi inc, All rights reserved_ \n\n---------------- \n\n__Acknowledgements:__ \n\n%sSome images in CommCare are graciously used under Creative Commons Licensing from thenounproject.com collection:\n\n* “Door” symbol by Tak Imoto \n* “Pencil” symbol by Creologica \n* “Notebook” symbol by Carlo \n* “Antenna” symbol by Dima \n* “Map Marker” symbol by P.J. Onori \n* "List" by Landan Lloyd \n* broken screen by Sam Martin from the Noun Project \n\n
@@ -236,7 +236,7 @@
     <string name="replace_location" cc:translatable="true">Replace Location</string>
     <string name="replace_video" cc:translatable="true">Replace Video</string>
     <string name="required_answer_error" cc:translatable="true">Sorry, this response is required!</string>
-    <string name="review" cc:translatable="true">continue</string>
+    <string name="review" cc:translatable="true">Continue</string>
     <string name="review_data" cc:translatable="true">Edit Saved Form</string>
     <string name="review_data_button" cc:translatable="true">Edit Saved Form</string>
     <string name="saved_data" cc:translatable="true">Incomplete (%s)</string>
@@ -398,7 +398,7 @@
     <string name="parse_coordinates_failure" cc:translatable="true">Could not parse input coordinates</string>
 
     <string name="location_provider_disabled" cc:translatable="true">Turn on your location to receive location updates</string>
-    <string name="wait_for_location_fix"  cc:translatable="true">CommCare is still trying to get your location. Please wait or click Cancel to abort.</string>
+    <string name="wait_for_location_fix" cc:translatable="true">CommCare is still trying to get your location. Please wait or click Cancel to abort.</string>
     <string name="invalid_case_property_length" cc:translatable="true">Invalid %1s, value must be 255 characters or less</string>
     <string name="invalid_case_graph_error" cc:translatable="true">This form introduces an invalid case relationship</string>
     <string name="root_detected_title" cc:translatable="true">Rooted Device Detected</string>
