--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -791,6 +791,13 @@
     <string name="connect_job_list_api_failure">An error occurred while connecting to the server.</string>
     <string name="connect_payment_acknowledge_notification_yes">Yes</string>
     <string name="connect_payment_acknowledge_notification_no">No</string>
+
+
+    <string name="connect_new_opportunity">New Opportunity</string>
+    <string name="connect_learn">Learn</string>
+    <string name="connect_delivery">Delivery</string>
+    <string name="connect_commcare_app">CommCare App</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
