--- a/app/res/values-fr/strings.xml
+++ b/app/res/values-fr/strings.xml
@@ -275,5 +275,8 @@ License.
     <string name="connect_learn">Apprendre</string>
     <string name="connect_delivery">Livraison</string>
     <string name="connect_commcare_app">Application CommCare</string>
+    <string name="connect_install">Installer</string>
     <string name="connect_install_app">Installer l\'application</string>
+
+    <string name="connect_install_new_commcare_app">Installer de nouvelles applications \nCommCare</string>
 </resources>
