--- a/app/res/values-pt/strings.xml
+++ b/app/res/values-pt/strings.xml
@@ -449,4 +449,9 @@
     <string name="connect_job_list_api_failure">Ocorreu um erro ao ligar ao servidor.</string>
     <string name="connect_payment_acknowledge_notification_yes">Sim</string>
     <string name="connect_payment_acknowledge_notification_no">Não</string>
+
+    <string name="connect_progress">Progresso</string>
+    <string name="connect_payment">Pagamento</string>
+    <string name="connect_delivery_progress_description">Você não concluiu nenhuma lição. Comece a aprender para ganhar seu certificado.</string>
+    <string name="connect_click_to_sync_progress">Clique para sincronizar o progresso</string>
 </resources>
