--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -791,4 +791,9 @@
     <string name="connect_job_list_api_failure">An error occurred while connecting to the server.</string>
     <string name="connect_payment_acknowledge_notification_yes">Yes</string>
     <string name="connect_payment_acknowledge_notification_no">No</string>
+
+    <string name="connect_job_info_visit">%d maximum Visits</string>
+    <string name="connect_job_info_days">%d Days to complete</string>
+    <string name="connect_job_info_max_visit">Maximum visits per day %d</string>
+    <string name="connect_job_info_visit_charge">Earn up to %s for visit</string>
 </resources>
