--- a/app/res/values-pt/strings.xml
+++ b/app/res/values-pt/strings.xml
@@ -449,4 +449,14 @@
     <string name="connect_job_list_api_failure">Ocorreu um erro ao ligar ao servidor.</string>
     <string name="connect_payment_acknowledge_notification_yes">Sim</string>
     <string name="connect_payment_acknowledge_notification_no">Não</string>
+
+    <string name="connect_job_info_delivery_detail">Detalhes da entrega</string>
+    <string name="connect_job_info_review_delivery">Revise os detalhes da entrega</string>
+    <string name="connect_job_info_visit">%d máximo de visitas</string>
+    <string name="connect_job_info_days">%d dias para concluir</string>
+    <string name="connect_job_info_max_visit">Máximo de visitas por dia %d</string>
+    <string name="connect_job_info_visit_charge">Ganhe até %s por visita</string>
+    <string name="connect_job_info_start_visit">Iniciar visita</string>
+    <string name="connect_job_info_download_delivery">Baixar entrega</string>
+    <string name="connect_job_info_download">Download</string>
 </resources>
