--- a/app/res/values-pt/strings.xml
+++ b/app/res/values-pt/strings.xml
@@ -418,8 +418,8 @@
     <string name="connect_results_summary_approved">Aprovado</string>
     <string name="connect_results_summary_earned">Ganhos</string>
     <string name="connect_results_summary_transferred">Transferido</string>
-    <string name="connect_results_payment_date">Emitido %s</string>
-    <string name="connect_results_payment_description">%s pago</string>
+    <string name="connect_results_payment_date">%s</string>
+    <string name="connect_results_payment_description">%s</string>
     <string name="connect_results_payment_confirm">Confirmar</string>
     <string name="connect_results_payment_confirm_undo">Desfazer confirmação</string>
     <string name="connect_results_payment_confirmed">Confirmado</string>
@@ -464,4 +464,13 @@
     <string name="connect_payment">Pagamento</string>
     <string name="connect_delivery_progress_description">Você não concluiu nenhuma lição. Comece a aprender para ganhar seu certificado.</string>
     <string name="connect_click_to_sync_progress">Clique para sincronizar o progresso</string>
+
+
+    <string name="connect_payment_received">Recebida</string>
+    <string name="connect_payment_transferred">Transferido</string>
+    <string name="connect_payment_confirm_transferred">Confirmar pagamento transferido</string>
+    <string name="connect_payment_revoke_transferred">Revogar confirmação de pagamento</string>
+    <string name="connect_payment_dialog_no">Não</string>
+    <string name="connect_payment_dialog_yes">Sim</string>
+    <string name="connect_payment_revert">Reverter</string>
 </resources>
