--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -474,7 +474,7 @@
     <string name="connect_pin_message_confirm">Please enter your recovery PIN</string>
     <string name="connect_pin">Enter PIN</string>
     <string name="connect_pin_repeat">Confirm PIN</string>
-    <string name="connect_pin_length">PIN must be %d digits</string>
+    <string name="connect_pin_length">Code must be %d digits</string>
     <string name="connect_pin_mismatch">PINs must match</string>
     <string name="connect_password_verify_title">Enter Your Password</string>
     <string name="connect_password_verify_message">Please enter your recovery password to continue.</string>
@@ -491,7 +491,7 @@
     <string name="connect_pin_recovery_message">You entered the wrong PIN too many times, you will need to recover your account.\n On the next screen, we\'ll send a code via SMS to the alternate phone number associated with your account.</string>
 
     <string name="connect_pin_confirm_message">You entered the wrong PIN too many times, you will have to configure the pin again.\n On the next screen, we\'ll redirect you to the configure pin page.</string>
-    <string name="connect_pin_verify_forgot">Don\'t have or forgot your PIN?</string>
+    <string name="connect_pin_verify_forgot">Don\'t have or forgot your Code?</string>
     <string name="connect_pin_fail_button">OK</string>
     <string name="connect_recovery_title">ConnectID Setup</string>
     <string name="connect_recovery_title2">Identify Existing Account</string>
