--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -489,11 +489,11 @@
     <string name="connect_password_fail_message">You entered the wrong password, please try again.</string>
     <string name="connect_password_recovery_message">You entered the wrong password too many times, you will need to recover your account.</string>
     <string name="connect_password_fail_button">OK</string>
-    <string name="connect_pin_fail_title">Wrong PIN</string>
-    <string name="connect_pin_fail_message">You entered the wrong PIN, please try again.</string>
-    <string name="connect_pin_recovery_message">You entered the wrong PIN too many times, you will need to recover your account.\n On the next screen, we\'ll send a code via SMS to the alternate phone number associated with your account.</string>
+    <string name="connect_pin_fail_title">Wrong Code</string>
+    <string name="connect_pin_fail_message">You entered the wrong Code, please try again.</string>
+    <string name="connect_pin_recovery_message">You entered the wrong Code too many times, you will need to recover your account.\n On the next screen, we\'ll send a code via SMS to the alternate phone number associated with your account.</string>
 
-    <string name="connect_pin_confirm_message">You entered the wrong PIN too many times, you will have to configure the pin again.\n On the next screen, we\'ll redirect you to the configure pin page.</string>
+    <string name="connect_pin_confirm_message">You entered the wrong Code too many times, you will have to configure the code again.\n On the next screen, we\'ll redirect you to the configure code page.</string>
     <string name="connect_pin_verify_forgot">Don\'t have or forgot your Code?</string>
     <string name="connect_pin_fail_button">OK</string>
     <string name="connect_recovery_title">ConnectID Setup</string>
