--- a/app/res/values-fr/strings.xml
+++ b/app/res/values-fr/strings.xml
@@ -298,6 +298,8 @@ License.
     <string name="connect_deactivate_account_message">Vous êtes sur le point de désactiver définitivement ce compte…</string>
     <string name="connect_deactivate_account_delete">Supprimer le compte</string>
     <string name="connect_deactivate_account_go_back">Retourner</string>
-    <string name="connect_deactivate_account_deactivated">Compte désactivé, allez en créer un nouveau</string>
-    <string name="connect_deactivate_account_creation">Créer un compte</string>
+    <string name="connect_deactivate_account_deactivated">Compte désactivé, vous pouvez maintenant créer un nouveau compte avec votre numéro de téléphone principal</string>
+    <string name="connect_deactivate_account_creation">D\'accord</string>
+    <string name="connect_deactivate_dialog_title">Es-tu sûr?</string>
+    <string name="connect_deactivate_dialog_description">Vous souhaitez désactiver votre compte définitivement ?</string>
 </resources>
