--- a/app/res/values-pt/strings.xml
+++ b/app/res/values-pt/strings.xml
@@ -471,7 +471,9 @@
     <string name="connect_deactivate_account">Desativar conta</string>
     <string name="connect_deactivate_account_message">Você está prestes a desativar permanentemente esta conta…</string>
     <string name="connect_deactivate_account_delete">Excluir conta</string>
-        <string name="connect_deactivate_account_go_back">Volte</string>
-    <string name="connect_deactivate_account_deactivated">Conta desativada, crie uma nova</string>
-    <string name="connect_deactivate_account_creation">Criar uma conta</string>
+    <string name="connect_deactivate_account_go_back">Volte</string>
+    <string name="connect_deactivate_account_deactivated">Conta desativada, agora você pode registrar uma nova conta com seu número de telefone principal</string>
+    <string name="connect_deactivate_account_creation">OK</string>
+    <string name="connect_deactivate_dialog_title">Tem certeza?</string>
+    <string name="connect_deactivate_dialog_description">Você deseja desativar sua conta permanentemente?</string>
 </resources>
