--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -600,6 +600,8 @@
     <string name="connect_job_visits_completed">Completed %d visits</string>
     <string name="connect_job_remaining">%d days remaining%s</string>
 
+    <string name="connect_job_intro_title">Opportunity</string>
+
     <string name="connect_job_remaining_from"> from %s</string>
 
     <string name="connect_job_learning">Learning</string>
@@ -628,6 +630,7 @@
     <string name="connect_learn_failed_title">Training Failed</string>
     <string name="connect_learn_complete_by">Complete Project by %s</string>
 
+    <string name="connect_learn_title">Learning Progress</string>
     <string name="connect_learn_status">You have completed %d of %d lessons.\nFinish learning to earn your certificate.</string>
     <string name="connect_learn_not_started">You haven\'t completed any lessons.\nStart learning to earn your certificate.</string>
     <string name="connect_learn_finished">You have earned a certificate for this job and are eligible to claim the job and begin delivering care.\nYour score: %d\nPassing score: %d</string>
@@ -820,6 +823,7 @@
         <item>save</item>
     </string-array>
 
+    <string name="connect_job_info_title">Opportunity Details</string>
     <string name="connect_job_info_delivery_detail">Delivery Details</string>
     <string name="connect_job_info_review_delivery">Review the delivery details</string>
     <string name="connect_job_info_visit">%d maximum Visits</string>
@@ -830,6 +834,7 @@
     <string name="connect_job_info_download_delivery">Download Delivery </string>
     <string name="connect_job_info_download">Download</string>
 
+    <string name="connect_delivery_progress_title">Delivery Progress</string>
     <string name="connect_progress">Progress</string>
     <string name="connect_payment">Payment</string>
     <string name="connect_delivery_progress_description">You haven’t completed any lessons. Start learning to earn your certificate.</string>
