--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -43,6 +43,9 @@
     <string name="ConnectInitiateUserAccountDeactivationURL">https://connectid.dimagi.com/users/recover/initiate_deactivation</string>
     <string name="ConnectConfirmUserAccountDeactivationURL">https://connectid.dimagi.com/users/recover/confirm_deactivation</string>
 
+    <!--    Connect Messaging URLs-->
+    <string name="ConnectMessageRetrieveMessagesURL">https://connectid.dimagi.com/users/retrieve_messages</string>
+
     <!-- region: All strings for multiple apps and app-agnostic properties -->
 
     <string name="key_server">https://pact.dimagi.com/keys/getkey</string>
